@@ -1,7 +1,7 @@
 ### Maven project
 - https://openjfx.io/openjfx-docs/#maven
 - Add dependecy (libs): Refer pom.xml
-- Config build
+- Config to build exe
 
   - javafx-maven-plugin, jpackage-maven-plugin -> to build exe
   - Guide link: https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9
@@ -12,6 +12,36 @@ mvn clean compile javafx:jlink jpackage:jpackage
 ```
 - Output folder: /target/dist (refer to img below)
 
+- Config to build jar 
+
+```xml
+ <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-shade-plugin</artifactId>
+    <executions>
+        <execution>
+            <goals>
+                <goal>shade</goal>
+            </goals>
+            <configuration>
+                <shadedArtifactAttached>true</shadedArtifactAttached>
+                <transformers>
+                    <transformer implementation=
+                                         "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <mainClass>com.example.demo.HelloApplication</mainClass>
+                    </transformer>
+                </transformers>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+```
+
+Run jar (-shade file) file  with vm option
+
+```command
+--module-path "path\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.base --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+```
 ### Note
 
 Install WIX Toolset to use jpackage
